# mopserdoni

./: README.md  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  admin.py  forms.py  models.py  user.py
app/templates/: admin.html  edit_offer.html  edit_project_need.html  index.html  layout.html  user_form.html  view_offers.html
archiv/mopser2000/: bietapp.db  flask_app.py  forms.py  models.py
archiv/mopser2000/static/css/: main.css
archiv/mopser2000/templates/: add_bedarf.html  add_record.html  analyse.html  delete_offers.html  edit_or_delete.html  edit_or_delete_bedarf.html  error.html  html_list.html  index.html  index_alt.html  result.html  select_bedarf.html  select_record.html
archiv/neu/: __init__.py  app.txt  forms.py  models.py  routes.py
instance/: app.db
src/mopserdoni/: __init__.py
